# themis-agent

./: .gitignore  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml
docs/: README.md  accessibility.md  architecture.md  architecture.mmd  foundry_verification.md  iq_integration.md  limitations.md  public_interest_use_case.md  safety_model.md  testing.md
outputs/: clinic_admin_portal_review.md  incomplete_review.md  risky_review.md  safe_review.md
samples/: change_clinic_admin_portal.md  change_incomplete.md  change_risky.md  change_safe.md  context_architecture.md  context_deployment_runbook.md  context_network_policy.md
src/themis/: __init__.py  azure_subscription_check.py  cli.py  contracts.py  foundry_configuration.py  foundry_resources.py  guardrails.py  iq.py  pipeline.py  run_logs.py  setup.py  setup_agent.py  ui_rows.py
src/themis/agents/: __init__.py  evidence_gap.py  intake.py  report.py  risk.py  verification.py
src/themis/render/: __init__.py  markdown_report.py
tests/: test_app_helpers.py  test_azure_subscription_check.py  test_cli_runs.py  test_contracts.py  test_foundry_configuration.py  test_foundry_resources.py  test_guardrails.py  test_iq.py  test_pipeline_mock.py  test_reports.py  test_setup.py  test_setup_agent.py  test_streamlit_app.py
