[project]
name = "themis-agent"
version = "0.1.0"
description = "Read-only reasoning agent for infrastructure change review."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "pydantic>=2.11,<3",
  "streamlit>=1.45,<2",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
foundry = [
  "azure-identity>=1.23,<2",
  "azure-ai-projects>=1.0.0b11,<2",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
]

[project.scripts]
themis-review = "themis.cli:main"
themis-setup = "themis.setup:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
